Adds real world stats for drunk driving

--- a/module3/LS_DS_123_Introduction_to_Bayesian_Inference_Assignment.ipynb
+++ b/module3/LS_DS_123_Introduction_to_Bayesian_Inference_Assignment.ipynb
@@ -64,18 +64,10 @@
     },
     {
       "cell_type": "markdown",
-      "execution_count": 5,
-      "metadata": {},
-      "outputs": [
-        {
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax (<ipython-input-5-16995e9039dc>, line 3)",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-16995e9039dc>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    $ P(A|B) = /frac{P(B|A) /times P(A)}{P)B}$\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
-      ],
+      "metadata": {
+        "id": "USPTYv2_NWxe",
+        "colab_type": "text"
+      },
       "source": [
         "## Bayes Theorem\n",
         "\n",
@@ -94,9 +86,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
-      "metadata": {},
-      "outputs": [],
+      "metadata": {
+        "id": "PaHsTNErNWxf",
+        "colab_type": "code",
+        "colab": {}
+      },
       "source": [
         "# TODO - code!\n",
         "def bayes_testing(\n",
@@ -113,34 +107,49 @@
         "    result = numerator / denominator\n",
         "    num_tests -= 1\n",
         "    if num_tests > 0:\n",
-        "        return bayes(result, sensitivity, specificity, num_tests)\n",
+        "        return bayes_testing(result, sensitivity, specificity, num_tests)\n",
         "    else:\n",
         "        return result\n"
-      ]
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": "0.33444816053511706"
-          },
-          "execution_count": 17,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "metadata": {
+        "id": "5q7WcNCmNWxk",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "9a8e750d-352d-4517-a73e-62a80347bd3e"
+      },
       "source": [
         "bayes_testing(1/200,1,.01, 1)"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.33444816053511706"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
+        }
       ]
     },
     {
       "cell_type": "markdown",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
+      "metadata": {
+        "id": "I1RxE58JNWxo",
+        "colab_type": "text"
+      },
       "source": [
         "#### Result\n",
         "The probability of a randomly selected individual with a positive result is a drug user is $33.4\\%$"
@@ -148,9 +157,10 @@
     },
     {
       "cell_type": "markdown",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
+      "metadata": {
+        "id": "_tmtysKWNWxp",
+        "colab_type": "text"
+      },
       "source": [
         "### Drunk Driving\n",
         "You should only truly need these two values in order to apply Bayes Theorem. In this example, imagine that individuals are taking a breathalyzer test with an 8% false positive rate, a 100% true positive rate, and that our prior belief about drunk driving in the population is 1/1000. \n",
@@ -161,49 +171,75 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": "0.012357884330202669"
-          },
-          "execution_count": 21,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "metadata": {
+        "id": "JgnIlWR9NWxq",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "dfc2f360-9e46-40c1-f5bf-4a9bb0b1c19d"
+      },
       "source": [
         "prior = 1/1000\n",
         "sensitivity = 1\n",
         "specificity = .08\n",
         "\n",
         "bayes_testing(prior, sensitivity, specificity, 1)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 19,
-      "metadata": {},
+      ],
+      "execution_count": 3,
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
-            "text/plain": "0.13525210993291495"
+            "text/plain": [
+              "0.012357884330202669"
+            ]
           },
-          "execution_count": 19,
-          "metadata": {},
-          "output_type": "execute_result"
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
         }
-      ],
-      "source": [
-        "bayes_testing(prior, sensitivity, specificity, 2)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
-      "metadata": {},
-      "outputs": [],
+      "metadata": {
+        "id": "YX1ERnaXNWxt",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "23586dce-0b59-4441-819e-accbb4b4e4a8"
+      },
+      "source": [
+        "bayes_testing(prior, sensitivity, specificity, 2)"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.13525210993291495"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mPMTKE8pNWxy",
+        "colab_type": "code",
+        "colab": {}
+      },
       "source": [
         "def bayes_loop(a, b, c):\n",
         "\n",
@@ -214,29 +250,130 @@
         "        if probability >= .95:\n",
         "            \n",
         "            return i"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "adm8xglgNWx1",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 102
+        },
+        "outputId": "2b1cc64d-5496-4dbb-fea7-e98880eb8819"
+      },
+      "source": [
+        "bayes_loop(prior, sensitivity, specificity)"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.012357884330202669\n",
+            "0.13525210993291495\n",
+            "0.6615996951348605\n",
+            "0.9606895076105054\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SFJKQKzZNaIr",
+        "colab_type": "text"
+      },
+      "source": [
+        "Real world Breathalyzers. [Citation](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4281544/)\n",
+        "\n",
+        "> The digital multiuse breathalyser had a sensitivity of 89.5% (95% CI 75.9% to 95.8%) and a specificity of 64.1% (95% CI 56.6% to 71.0%)\n",
+        "\n",
+        "> 20% of fatal accidents involve a drunk driver\n",
+        "[Source](https://crashstats.nhtsa.dot.gov/Api/Public/ViewPublication/812630)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
-      "metadata": {},
+      "metadata": {
+        "id": "PKbGEJpqOx-V",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "21068eec-bc69-4788-d1e7-c767355b7ba8"
+      },
+      "source": [
+        "real_world_bayes = bayes_testing(.2, .895, .641)\n",
+        "\n",
+        "print(f'The real world probablity of a driver actually being drunk given a positive test is: {real_world_bayes*100}%')"
+      ],
+      "execution_count": 8,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
-          "text": "0.012357884330202669\n0.13525210993291495\n0.6615996951348605\n0.9606895076105054\n"
-        },
-        {
-          "data": {
-            "text/plain": "4"
-          },
-          "execution_count": 34,
-          "metadata": {},
-          "output_type": "execute_result"
+          "text": [
+            "The real world probablity of a driver actually being drunk given a positive test is: 25.874530211043655%\n"
+          ],
+          "name": "stdout"
         }
-      ],
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BiJ2p47YTO-A",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 255
+        },
+        "outputId": "80a73bc2-a96c-4dba-b5ba-9a830295fd8a"
+      },
       "source": [
-        "bayes_loop(prior, sensitivity, specificity)"
+        "real_world_99 = bayes_loop(.2, .895, .641)\n",
+        "\n",
+        "print(f'In order to have a confidence >95%, you would need to test {real_world_99} times')"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.25874530211043656\n",
+            "0.32767802977154475\n",
+            "0.40494283271265413\n",
+            "0.4872234530248339\n",
+            "0.5702023902785309\n",
+            "0.64941555487407\n",
+            "0.7211685627204596\n",
+            "0.7831400397848495\n",
+            "0.8344989562720116\n",
+            "0.8756262557672732\n",
+            "0.907664196591361\n",
+            "0.9320894111790656\n",
+            "0.9504065483325859\n",
+            "In order to have a confidence >95%, you would need to test 13 times\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -277,16 +414,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 0,
       "metadata": {
-        "colab": {},
         "colab_type": "code",
-        "id": "iDi0eFr1x-v_"
+        "id": "iDi0eFr1x-v_",
+        "colab": {}
       },
-      "outputs": [],
       "source": [
         ""
-      ]
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
