added docstring to function

--- a/module3/LS_DS_123_Introduction_to_Bayesian_Inference_Assignment.ipynb
+++ b/module3/LS_DS_123_Introduction_to_Bayesian_Inference_Assignment.ipynb
@@ -65,8 +65,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "USPTYv2_NWxe",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "USPTYv2_NWxe"
       },
       "source": [
         "## Bayes Theorem\n",
@@ -86,18 +86,28 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "PaHsTNErNWxf",
-        "colab_type": "code",
-        "colab": {}
-      },
+      "execution_count": 12,
+      "metadata": {},
+      "outputs": [],
       "source": [
         "# TODO - code!\n",
         "def bayes_testing(\n",
-        "    prior, \n",
-        "    sensitivity, \n",
-        "    specificity, \n",
-        "    num_tests = 1):\n",
+        "    prior:float, \n",
+        "    sensitivity:float, \n",
+        "    specificity:float, \n",
+        "    num_tests:int = 1) -> float:\n",
+        "    \"\"\" Return the probablity of a positive result being true\n",
+        "\n",
+        "    Args:\n",
+        "        prior (float)\n",
+        "        sensitivity (float): probability of true positive\n",
+        "        specificity (float) probability of false positive\n",
+        "        num_tests (int): The number of tests to run\n",
+        "\n",
+        "    Returns:\n",
+        "        bayesian probability (float)\n",
+        "    \"\"\"\n",
+        "\n",
         "    p_b_given_a = sensitivity \n",
         "    numerator = p_b_given_a * prior\n",
         "\n",
@@ -110,45 +120,31 @@
         "        return bayes_testing(result, sensitivity, specificity, num_tests)\n",
         "    else:\n",
         "        return result\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "5q7WcNCmNWxk",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "9a8e750d-352d-4517-a73e-62a80347bd3e"
-      },
-      "source": [
-        "bayes_testing(1/200,1,.01, 1)"
-      ],
-      "execution_count": 2,
+      "execution_count": 11,
+      "metadata": {},
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "0.33444816053511706"
-            ]
+            "text/plain": "0.33444816053511706"
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 2
+          "execution_count": 11,
+          "metadata": {},
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "bayes_testing(1/200,1,.01, 1)"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "I1RxE58JNWxo",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "I1RxE58JNWxo"
       },
       "source": [
         "#### Result\n",
@@ -158,11 +154,13 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "_tmtysKWNWxp",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "_tmtysKWNWxp"
       },
       "source": [
         "### Drunk Driving\n",
+        "`def prob_drunk_given_positive(prob_drunk_prior, false_positive_rate):` \n",
+        "\n",
         "You should only truly need these two values in order to apply Bayes Theorem. In this example, imagine that individuals are taking a breathalyzer test with an 8% false positive rate, a 100% true positive rate, and that our prior belief about drunk driving in the population is 1/1000. \n",
         " - What is the probability that a person is drunk after one positive breathalyzer test?\n",
         " - What is the probability that a person is drunk after two positive breathalyzer tests?\n",
@@ -171,134 +169,84 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "JgnIlWR9NWxq",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "dfc2f360-9e46-40c1-f5bf-4a9bb0b1c19d"
-      },
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": "0.012357884330202669"
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "prior = 1/1000\n",
         "sensitivity = 1\n",
         "specificity = .08\n",
         "\n",
-        "bayes_testing(prior, sensitivity, specificity, 1)"
-      ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.012357884330202669"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 3
-        }
+        "def prob_drunk_given_positive(prob_drunk_prior, false_positive_rate, true_positive_rate):\n",
+        "    return bayes_testing(prior, sensitivity, specificity, 1)\n",
+        "\n",
+        "prob_drunk_given_positive(prior,specificity, sensitivity)"
       ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "YX1ERnaXNWxt",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "23586dce-0b59-4441-819e-accbb4b4e4a8"
-      },
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": "0.13525210993291495"
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "bayes_testing(prior, sensitivity, specificity, 2)"
-      ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.13525210993291495"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 4
-        }
       ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "mPMTKE8pNWxy",
-        "colab_type": "code",
-        "colab": {}
-      },
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [],
       "source": [
         "def bayes_loop(a, b, c):\n",
         "\n",
         "    probability = a\n",
         "    for i in range(1,1000):\n",
         "        probability = bayes_testing(probability, b, c)\n",
-        "        print(probability)\n",
+        "        # print(probability)\n",
         "        if probability >= .95:\n",
         "            \n",
         "            return i"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "adm8xglgNWx1",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 102
-        },
-        "outputId": "2b1cc64d-5496-4dbb-fea7-e98880eb8819"
-      },
-      "source": [
-        "bayes_loop(prior, sensitivity, specificity)"
-      ],
       "execution_count": 6,
+      "metadata": {},
       "outputs": [
         {
+          "name": "stdout",
           "output_type": "stream",
-          "text": [
-            "0.012357884330202669\n",
-            "0.13525210993291495\n",
-            "0.6615996951348605\n",
-            "0.9606895076105054\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "4"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 6
+          "text": "The number of repeated tests for a greater than 95% confidence is: 4\n"
         }
+      ],
+      "source": [
+        "print(f'The number of repeated tests for a greater than 95% confidence is: {bayes_loop(prior, sensitivity, specificity)}')"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "SFJKQKzZNaIr",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "SFJKQKzZNaIr"
       },
       "source": [
         "Real world Breathalyzers. [Citation](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4281544/)\n",
@@ -311,69 +259,36 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "PKbGEJpqOx-V",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "21068eec-bc69-4788-d1e7-c767355b7ba8"
-      },
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "The real world probablity of a driver actually being drunk given a positive test is: 25.874530211043655%\n"
+        }
+      ],
       "source": [
         "real_world_bayes = bayes_testing(.2, .895, .641)\n",
         "\n",
         "print(f'The real world probablity of a driver actually being drunk given a positive test is: {real_world_bayes*100}%')"
-      ],
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "The real world probablity of a driver actually being drunk given a positive test is: 25.874530211043655%\n"
-          ],
-          "name": "stdout"
-        }
       ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "BiJ2p47YTO-A",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 255
-        },
-        "outputId": "80a73bc2-a96c-4dba-b5ba-9a830295fd8a"
-      },
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "In order to have a confidence >95%, you would need to test 13 times\n"
+        }
+      ],
       "source": [
         "real_world_99 = bayes_loop(.2, .895, .641)\n",
         "\n",
         "print(f'In order to have a confidence >95%, you would need to test {real_world_99} times')"
-      ],
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "0.25874530211043656\n",
-            "0.32767802977154475\n",
-            "0.40494283271265413\n",
-            "0.4872234530248339\n",
-            "0.5702023902785309\n",
-            "0.64941555487407\n",
-            "0.7211685627204596\n",
-            "0.7831400397848495\n",
-            "0.8344989562720116\n",
-            "0.8756262557672732\n",
-            "0.907664196591361\n",
-            "0.9320894111790656\n",
-            "0.9504065483325859\n",
-            "In order to have a confidence >95%, you would need to test 13 times\n"
-          ],
-          "name": "stdout"
-        }
       ]
     },
     {
@@ -414,16 +329,16 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 0,
       "metadata": {
+        "colab": {},
         "colab_type": "code",
-        "id": "iDi0eFr1x-v_",
-        "colab": {}
+        "id": "iDi0eFr1x-v_"
       },
+      "outputs": [],
       "source": [
         ""
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     }
   ]
 }
