Changes frac to dfrac

--- a/module2/LS_DS_122_Sampling_Confidence_Intervals_and_Hypothesis_Testing_Assignment.ipynb
+++ b/module2/LS_DS_122_Sampling_Confidence_Intervals_and_Hypothesis_Testing_Assignment.ipynb
@@ -84,11 +84,11 @@
       "metadata": {
         "id": "h1_Mk9Mnisxz",
         "colab_type": "code",
+        "outputId": "84248c9b-24c2-4350-cf77-4831f8f3f48c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 258
-        },
-        "outputId": "84248c9b-24c2-4350-cf77-4831f8f3f48c"
+        }
       },
       "source": [
         "headers = [\n",
@@ -120,7 +120,7 @@
         "votes_df = votes_df.replace({'y':1, 'n':0})\n",
         "votes_df.head()"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -335,17 +335,17 @@
       "metadata": {
         "id": "l4bPbHLrkg45",
         "colab_type": "code",
+        "outputId": "4cbf4bf3-66c4-4189-94de-56271ab82bab",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 412
-        },
-        "outputId": "4cbf4bf3-66c4-4189-94de-56271ab82bab"
+        }
       },
       "source": [
         "test_var = votes_df[\"education-spending\"]\n",
         "plot_confidence_interval(test_var);"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -396,16 +396,16 @@
       "metadata": {
         "id": "921caIFhmrep",
         "colab_type": "code",
+        "outputId": "a2f64948-6b31-485d-b9d5-8ab6a4b8f81a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 219
-        },
-        "outputId": "a2f64948-6b31-485d-b9d5-8ab6a4b8f81a"
+        }
       },
       "source": [
         "!wget 'https://archive.ics.uci.edu/ml/machine-learning-databases/00222/bank.zip'"
       ],
-      "execution_count": 24,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -431,16 +431,16 @@
       "metadata": {
         "id": "6RKPFr9Zmxnd",
         "colab_type": "code",
+        "outputId": "3892ea89-da17-469b-9105-181248b17471",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 90
-        },
-        "outputId": "3892ea89-da17-469b-9105-181248b17471"
+        }
       },
       "source": [
         "!unzip bank.zip"
       ],
-      "execution_count": 25,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -459,16 +459,16 @@
       "metadata": {
         "id": "JVzly2eAm2ax",
         "colab_type": "code",
+        "outputId": "79444f9e-19fb-4230-ca74-c52df816916d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "79444f9e-19fb-4230-ca74-c52df816916d"
+        }
       },
       "source": [
         "!ls"
       ],
-      "execution_count": 26,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -497,16 +497,16 @@
       "metadata": {
         "id": "RYWC455rm_be",
         "colab_type": "code",
+        "outputId": "37f77896-156f-4120-9865-cff6c8771e00",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        },
-        "outputId": "37f77896-156f-4120-9865-cff6c8771e00"
+        }
       },
       "source": [
         "bank_df.head()"
       ],
-      "execution_count": 30,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -677,16 +677,16 @@
       "metadata": {
         "id": "4oNa8_8Hn3sC",
         "colab_type": "code",
+        "outputId": "c209c5df-dd05-43be-ef3f-9e8c1b93f01d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 175
-        },
-        "outputId": "c209c5df-dd05-43be-ef3f-9e8c1b93f01d"
+        }
       },
       "source": [
         "bank_df.describe(exclude='number')"
       ],
-      "execution_count": 31,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -801,17 +801,17 @@
       "metadata": {
         "id": "ldFAmj_DoNqT",
         "colab_type": "code",
+        "outputId": "bf4cdd48-97a5-4774-82ea-8743214c10b8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        },
-        "outputId": "bf4cdd48-97a5-4774-82ea-8743214c10b8"
+        }
       },
       "source": [
         "marital_school_ct = pd.crosstab(bank_df['marital'], bank_df['education'], margins = True)\n",
         "marital_school_ct"
       ],
-      "execution_count": 36,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -921,17 +921,17 @@
       "metadata": {
         "id": "EIsjrqUBwMQg",
         "colab_type": "code",
+        "outputId": "ca999980-cb90-4e9c-99b6-d9e6afb174c5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "ca999980-cb90-4e9c-99b6-d9e6afb174c5"
+        }
       },
       "source": [
         "row_total = marital_school_ct.iloc[0:3,4].values\n",
         "print(row_total)"
       ],
-      "execution_count": 41,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -947,17 +947,17 @@
       "metadata": {
         "id": "cAOwZcX-xXXR",
         "colab_type": "code",
+        "outputId": "dee810e3-1eb4-4694-c608-2baeaed54c10",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "dee810e3-1eb4-4694-c608-2baeaed54c10"
+        }
       },
       "source": [
         "col_total = marital_school_ct.iloc[3,0:4].values\n",
         "print(col_total)"
       ],
-      "execution_count": 48,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -973,17 +973,17 @@
       "metadata": {
         "id": "6O2RQyutx7uF",
         "colab_type": "code",
+        "outputId": "6e1482c4-bf60-45a2-d5ec-34419bf119e7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "6e1482c4-bf60-45a2-d5ec-34419bf119e7"
+        }
       },
       "source": [
         "total = marital_school_ct.loc['All', 'All']\n",
         "print(total)"
       ],
-      "execution_count": 51,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1003,7 +1003,7 @@
       "source": [
         "### Expected\n",
         "Following the formula:\n",
-        "$$ \\rm{expected}_{i,\\,j} = \\frac{\\left(\\rm{row\\,total} \\right)_i \\left(\\rm{column \\,total} \\right)_j }{\\rm{total}} $$"
+        "$$ \\rm{expected}_{i,\\,j} = \\dfrac{\\left(\\rm{row\\,total} \\right)_i \\left(\\rm{column \\,total} \\right)_j }{\\rm{total}} $$"
       ]
     },
     {
@@ -1036,17 +1036,17 @@
       "metadata": {
         "id": "pDciDK6z0JGb",
         "colab_type": "code",
+        "outputId": "4b9ec098-57ee-4865-b40a-0a9f70c77cf1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
-        },
-        "outputId": "4b9ec098-57ee-4865-b40a-0a9f70c77cf1"
+        }
       },
       "source": [
         "expected = get_expected(row_total, col_total, total)\n",
         "expected"
       ],
-      "execution_count": 59,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1069,16 +1069,16 @@
       "metadata": {
         "id": "PRHlOFiW0UTn",
         "colab_type": "code",
+        "outputId": "c6f67a4d-03e6-4521-baa1-9ff20488ff67",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 175
-        },
-        "outputId": "c6f67a4d-03e6-4521-baa1-9ff20488ff67"
+        }
       },
       "source": [
         "marital_school_ct_no_margin"
       ],
-      "execution_count": 58,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1161,18 +1161,18 @@
       "metadata": {
         "id": "6WOesV-g1Eee",
         "colab_type": "code",
+        "outputId": "60e726b9-b1eb-40f6-cb64-e4128c5d62a0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "60e726b9-b1eb-40f6-cb64-e4128c5d62a0"
+        }
       },
       "source": [
         "# Array broadcasting will work with numpy arrays but not python lists\n",
         "chi_squared = ((observed - expected)**2/(expected)).sum() \n",
         "print(f\"Chi-Squared: {chi_squared}\")"
       ],
-      "execution_count": 62,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1188,18 +1188,18 @@
       "metadata": {
         "id": "yMWrSecO2FDq",
         "colab_type": "code",
+        "outputId": "8b63483b-6689-4bc9-a1bb-acfc7c31418a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "8b63483b-6689-4bc9-a1bb-acfc7c31418a"
+        }
       },
       "source": [
         "# Calculate Degrees of Freedom\n",
         "dof = (len(row_total)-1)*(len(col_total)-1)\n",
         "print(f\"Degrees of Freedom: {dof}\")"
       ],
-      "execution_count": 64,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1215,11 +1215,11 @@
       "metadata": {
         "id": "4oyGcxXN2MEy",
         "colab_type": "code",
+        "outputId": "1090a464-b547-4235-8b89-291047f52b5b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 146
-        },
-        "outputId": "1090a464-b547-4235-8b89-291047f52b5b"
+        }
       },
       "source": [
         "chi_squared, p_value, dof, expected = stats.chi2_contingency(observed)\n",
@@ -1229,7 +1229,7 @@
         "print(f\"Degrees of Freedom: {dof}\") \n",
         "print(\"Expected: \\n\", np.array(expected))"
       ],
-      "execution_count": 65,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
