Completed module 3 assignment

--- a/module3/LS_DS_123_Introduction_to_Bayesian_Inference_Assignment.ipynb
+++ b/module3/LS_DS_123_Introduction_to_Bayesian_Inference_Assignment.ipynb
@@ -71,7 +71,7 @@
       "source": [
         "## Bayes Theorem\n",
         "\n",
-        "$$ P(A|B) = \\frac{P(B|A) \\times P(A)}{P(B)}$$\n",
+        "$$ P(A|B) = \\dfrac{P(B|A) \\times P(A)}{P(B)}$$\n",
         "\n",
         "The probability of A given B is equal to the product of probability of B given A multiplied by the probability of A all over the probability of B\n",
         "\n",
@@ -289,6 +289,17 @@
         "real_world_99 = bayes_loop(.2, .895, .641)\n",
         "\n",
         "print(f'In order to have a confidence >95%, you would need to test {real_world_99} times')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "### In your own words, summarize the difference between Bayesian and Frequentist statistics\n",
+        "\n",
+        "Frequentist statistics uses math and repeatable tests using samples to attempt to describe an unknown population value. Bayesian statistics uses math and prior belief or knowledge to describe a constantly updating hypothesis"
       ]
     },
     {
