--- a/module3/LS_DS_123_Introduction_to_Bayesian_Inference_Assignment.ipynb
+++ b/module3/LS_DS_123_Introduction_to_Bayesian_Inference_Assignment.ipynb
@@ -7,8 +7,8 @@
       "provenance": []
     },
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
+      "name": "python37664bitdataenvcondac48009ebdcd342ee8dd75144910fb8c3",
+      "display_name": "Python 3.7.6 64-bit ('data_env': conda)"
     }
   },
   "cells": [
@@ -85,10 +85,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 12,
-      "metadata": {},
-      "outputs": [],
       "source": [
         "# TODO - code!\n",
         "def bayes_testing(\n",
@@ -119,26 +115,31 @@
         "    if num_tests > 0:\n",
         "        return bayes_testing(result, sensitivity, specificity, num_tests)\n",
         "    else:\n",
-        "        return result\n"
-      ]
+        "        return result\n",
+        ""
+      ],
+      "cell_type": "code",
+      "outputs": [],
+      "metadata": {},
+      "execution_count": 3
     },
     {
+      "source": [
+        "bayes_testing(1/200,1,.01, 1)"
+      ],
       "cell_type": "code",
-      "execution_count": 11,
-      "metadata": {},
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": "0.33444816053511706"
           },
-          "execution_count": 11,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 4
         }
       ],
-      "source": [
-        "bayes_testing(1/200,1,.01, 1)"
-      ]
+      "metadata": {},
+      "execution_count": 4
     },
     {
       "cell_type": "markdown",
@@ -168,19 +169,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 3,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": "0.012357884330202669"
-          },
-          "execution_count": 3,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
       "source": [
         "prior = 1/1000\n",
         "sensitivity = 1\n",
@@ -190,31 +178,40 @@
         "    return bayes_testing(prior, sensitivity, specificity, 1)\n",
         "\n",
         "prob_drunk_given_positive(prior,specificity, sensitivity)"
-      ]
-    },
-    {
+      ],
       "cell_type": "code",
-      "execution_count": 4,
-      "metadata": {},
       "outputs": [
         {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": "0.012357884330202669"
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ],
+      "metadata": {},
+      "execution_count": 5
+    },
+    {
+      "source": [
+        "bayes_testing(prior, sensitivity, specificity, 2)"
+      ],
+      "cell_type": "code",
+      "outputs": [
+        {
+          "output_type": "execute_result",
           "data": {
             "text/plain": "0.13525210993291495"
           },
-          "execution_count": 4,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 6
         }
       ],
-      "source": [
-        "bayes_testing(prior, sensitivity, specificity, 2)"
-      ]
+      "metadata": {},
+      "execution_count": 6
     },
     {
-      "cell_type": "code",
-      "execution_count": 5,
-      "metadata": {},
-      "outputs": [],
       "source": [
         "def bayes_loop(a, b, c):\n",
         "\n",
@@ -225,22 +222,26 @@
         "        if probability >= .95:\n",
         "            \n",
         "            return i"
-      ]
+      ],
+      "cell_type": "code",
+      "outputs": [],
+      "metadata": {},
+      "execution_count": 7
     },
     {
+      "source": [
+        "print(f'The number of repeated tests for a greater than 95% confidence is: {bayes_loop(prior, sensitivity, specificity)}')"
+      ],
       "cell_type": "code",
-      "execution_count": 6,
-      "metadata": {},
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": "The number of repeated tests for a greater than 95% confidence is: 4\n"
         }
       ],
-      "source": [
-        "print(f'The number of repeated tests for a greater than 95% confidence is: {bayes_loop(prior, sensitivity, specificity)}')"
-      ]
+      "metadata": {},
+      "execution_count": 8
     },
     {
       "cell_type": "markdown",
@@ -258,38 +259,38 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 7,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": "The real world probablity of a driver actually being drunk given a positive test is: 25.874530211043655%\n"
-        }
-      ],
       "source": [
         "real_world_bayes = bayes_testing(.2, .895, .641)\n",
         "\n",
         "print(f'The real world probablity of a driver actually being drunk given a positive test is: {real_world_bayes*100}%')"
-      ]
-    },
-    {
+      ],
       "cell_type": "code",
-      "execution_count": 8,
-      "metadata": {},
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
-          "text": "In order to have a confidence >95%, you would need to test 13 times\n"
+          "name": "stdout",
+          "text": "The real world probablity of a driver actually being drunk given a positive test is: 25.874530211043655%\n"
         }
       ],
+      "metadata": {},
+      "execution_count": 9
+    },
+    {
       "source": [
         "real_world_99 = bayes_loop(.2, .895, .641)\n",
         "\n",
         "print(f'In order to have a confidence >95%, you would need to test {real_world_99} times')"
-      ]
+      ],
+      "cell_type": "code",
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": "In order to have a confidence >95%, you would need to test 13 times\n"
+        }
+      ],
+      "metadata": {},
+      "execution_count": 10
     },
     {
       "cell_type": "markdown",
